# paas-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  paascli-tokens.json  token.txt  tokens.yml  whitelist.yml
.github/: CODE_OF_CONDUCT
.github/workflows/: build-and-test.yml  check-version.yml  docker.yml  lint-and-test.yml  publish.yml
client/: README.md  eslint.config.js  jest.config.js  jest.config.ts  package.json  rollup.config.js  tsconfig.json
client/js/: .gitignore  README.md  package.json  rollup.config.js  tsconfig.json
client/js/src/: index.ts  messages.ts  paas-client.ts  sessions.ts  transcryptor.ts
client/js/tests/: index.test.ts
client/rs/: Cargo.toml  README.md
client/rs/src/: auth.rs  error.rs  lib.rs  pseudonym_service.rs  sessions.rs  transcryptor_client.rs
client/rs/tests/: tests.rs
client/src/: index.js  index.ts  types.ts
client/tests/: index.test.ts
common/: .gitignore  Cargo.toml  README.md
common/src/: lib.rs  paths.rs  sessions.rs  status.rs  transcrypt.rs
example/: access_rules.yml  allowlist.yml  authentik.pem  docker-compose.yml  index.html  package.json  tokens1.yml  tokens2.yml  tokens3.yml
example/public/: index.js  libpep.js  libpep_bg.wasm
example/servers/PaaS2/: docker-compose.yaml
example/servers/PaaS3/: docker-compose.yaml
example/servers/PaaS3/resources/: server_config.yml
resources/: allowlist.yml  entrypoint.sh  paas_config.json  server_config.yml  token_users.yml
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
server/example/: access_rules.yml  docker-compose.yml  package.json  public.pem  server_config1.yml  server_config2.yml
server/example/public/: index.js
server/src/: access_rules.rs  auth_middleware.rs  main.rs  pep_crypto.rs
server/src/application/: sessions.rs  status.rs  transcrypt.rs
server/tests/: access_rules.rs  integration_test.rs
src/: access_rules.rs  application.rs  auth_middleware.rs  config.rs  domain_middleware.rs  errors.rs  lib.rs  logging.rs  main.rs  middleware.rs  pep_crypto.rs  pep_system_connector.rs  pseudo_domain_middleware.rs  redis_connector.rs  session_storage.rs  telemetry.rs
src/application/: sessions.rs  status.rs  transcrypt.rs
src/auth/: core.rs  generic.rs  jwt.rs  mod.rs  oidc.rs  token.rs
tests/: access_rules.rs  integration_test.rs  test_access_rules.rs
