[package]
name = "paas-server"
version = "0.8.2"
authors = [
    "Job Doesburg <job@jobdoesburg.nl>",
    "Julian van der Horst <julian.vanderhorst@ru.nl"
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/NOLAI/paas-server"
repository = "https://github.com/NOLAI/paas-server"
documentation = "https://docs.rs/paas-server"
description = "PEP Authorization API Service"
readme = "README.md"

[[bin]]
name = "paas_server"
path = "src/main.rs"

[lib]
name = "paas_server"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.7.1"
jsonwebtoken = {features = ["use_pem"], version = "9.3" }
jwks_client_rs = "0.5.1"
reqwest = { version = "0.12", features = ["json"] }
paas-api = "0.3"
libpep = "^0.6.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
rand = "^0.8"
redis = { version = "0.29.2", features = ["r2d2"] }
r2d2 = "0.8.10"
chrono = { version = "0.4.40", features = ["serde"] }
log = "^0.4"
env_logger = "^0.11"
thiserror = "2.0.12"
futures = "0.3.31"
