[package]
name = "paas-server"
version = "0.9.0"
authors = [
    "Job Doesburg <job@jobdoesburg.nl>",
    "Julian van der Horst <julian.vanderhorst@ru.nl"
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/NOLAI/paas-server"
repository = "https://github.com/NOLAI/paas-server"
documentation = "https://docs.rs/paas-server"
description = "PEP Authorization API Service"
readme = "README.md"

[[bin]]
name = "paas_server"
path = "src/main.rs"

[lib]
name = "paas_server"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.7.1"
jsonwebtoken = {features = ["use_pem", "rust_crypto"], version = "10.2.0" }
jwks_client_rs = "0.5.2"
reqwest = { version = "0.13.1", features = ["json"] }
paas-api = { path = "../paas-api" }
libpep = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
rand = "^0.10.0-rc.6"
redis = { version = "1.0.2", features = ["r2d2"] }
r2d2 = "0.8.10"
chrono = { version = "0.4.42", features = ["serde"] }
log = "^0.4"
env_logger = "^0.11"
thiserror = "2.0.17"
futures = "0.3.31"
