[package]
name = "paas_server"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "paas_server"
path = "src/main.rs"

[lib]
name = "paas_server"
path = "src/lib.rs"


[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
futures-util = "0.3.30"
libpep = "^0.6.2"
rand = "^0.8"
redis = "0.27.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = {features = ["use_pem"], version = "9.3.0" }
log = "^0.4"
env_logger = "^0.11"
