[package]
name = "paas-server"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "paas_server"
path = "src/main.rs"

[lib]
name = "paas_server"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
libpep = {  workspace = true }
paas-common = { path = "../common" }
futures-util = "0.3.30"
rand = "^0.8"
redis = "0.27.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = {features = ["use_pem"], version = "9.3.0" }
log = "^0.4"
env_logger = "^0.11"
