[package]
name = "paas-client"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "paas_client"
path = "src/lib.rs"

[dependencies]
libpep = {  workspace = true }
serde = { workspace = true }
paas-common = { path = "../../common" }
rand_core = "0.6.4"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4.39"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "0.31.0"