[package]
name = "paas-client"
version = "0.5.7"
authors = [
    "Job Doesburg <job@jobdoesburg.nl>",
    "Julian van der Horst <julian.vanderhorst@ru.nl"
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/NOLAI/paas-client-rs"
repository = "https://github.com/NOLAI/paas-client-rs"
documentation = "https://docs.rs/paas-client"
description = "PEP Authorization API Service client"
readme = "README.md"

[lib]
name = "paas_client"
path = "src/lib.rs"

[[bin]]
name = "paascli"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["clap"]

[dependencies]
paas-api = "0.2"
libpep = "^0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "^0.6", features = ["std"] }
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4.39"
clap = { version = "4.5.27", optional = true }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "0.31.0"

